pkg/front_end/testcases/inference/infer_types_on_generic_instantiations_3.dart.strong.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/infer_types_on_generic_instantiations_3.dart:15:62: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
// Try changing the type of the left hand side, or casting the right hand side to 'int'.
//   get /*@topType=int*/ w => /*error:RETURN_OF_INVALID_TYPE*/ "hello";
//                                                              ^
//
// pkg/front_end/testcases/inference/infer_types_on_generic_instantiations_3.dart:19:69: Error: A value of type 'int' can't be assigned to a variable of type 'String'.
// Try changing the type of the left hand side, or casting the right hand side to 'String'.
//   String y = /*error:INVALID_ASSIGNMENT*/ new B(). /*@target=B::x*/ x;
//                                                                     ^
//
import self as self;
import "dart:core" as core;

class A<T extends core::Object = dynamic> extends core::Object {
  final field self::A::T x = null;
  final field self::A::T w = null;
  synthetic constructor •() → self::A<self::A::T>
    : super core::Object::•()
    ;
}
class B extends core::Object implements self::A<core::int> {
  synthetic constructor •() → self::B
    : super core::Object::•()
    ;
  get x() → core::int
    return 3;
  get w() → core::int
    return let final<BottomType> #t1 = invalid-expression "pkg/front_end/testcases/inference/infer_types_on_generic_instantiations_3.dart:15:62: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
Try changing the type of the left hand side, or casting the right hand side to 'int'.
  get /*@topType=int*/ w => /*error:RETURN_OF_INVALID_TYPE*/ \"hello\";
                                                             ^" in "hello" as{TypeError} core::int;
}
static method foo() → dynamic {
  core::String y = let final<BottomType> #t2 = invalid-expression "pkg/front_end/testcases/inference/infer_types_on_generic_instantiations_3.dart:19:69: Error: A value of type 'int' can't be assigned to a variable of type 'String'.
Try changing the type of the left hand side, or casting the right hand side to 'String'.
  String y = /*error:INVALID_ASSIGNMENT*/ new B(). /*@target=B::x*/ x;
                                                                    ^" in new self::B::•().{self::B::x} as{TypeError} core::String;
  core::int z = new self::B::•().{self::B::x};
}
static method main() → dynamic {}
